--- a/MoogleEngine/readme.tex
+++ b/MoogleEngine/readme.tex
@@ -1,5 +1,5 @@
 \documentclass[a4paper,12pt]{article}
-\author{Edward}
+\author{Eduard}
 \title{Proyecto de Programación I.Facultad de Matemática y Computación - Universidad de La Habana.Cursos 2021, 2022}
 
 \begin{document}
