--- a/MoogleEngine/readme.tex
+++ b/MoogleEngine/readme.tex
@@ -1,6 +1,6 @@
 \documentclass[a4paper,12pt]{article}
 \author{Eduard}
-\title{Proyecto de Programación I.Facultad de Matemática y Computación - Universidad de La Habana.Cursos 2021, 2022}
+\title{Proyecto de Programación I.Facultad de Matemática y Computación - Universidad de La Habana.}
 
 \begin{document}
 \maketitle
